# short-loop-key-estimation

./: LICENSE  README.md  eval.py  main.py  pyproject.toml  training_loop.py
eval/: metrics.csv
skey/: hcqt.py  key_detection.py
skey/models/ks_mode/7/basic/20250819_222859/: best_model.pt  last_iter.pt
skey/models/ks_mode/7/basic/ssl-gtzan-20250701_015318/: ssl-gtzan-20250701_015318.pt
training_utils/: callbacks.py  scheduler.py  skey.py  skey_loss.py  training.py
training_utils/config/: skey.gin
training_utils/dataloader/: __init__ (1).py
